--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.2"
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "next": "14.2.13",
+    "axios": "^1.7.7",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.14.0",
+    "framer-motion": "^11.5.6"
   },
   "devDependencies": {
     "typescript": "^5",
