--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.14.0",
     "axios": "^1.7.7",
+    "cookies-next": "^4.1.1",
     "framer-motion": "^11.5.6",
+    "jose": "^5.9.6",
+    "js-cookie": "^3.0.5",
     "next": "14.2.13",
     "react": "^18",
     "react-date-picker": "^11.0.0",
@@ -25,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
