--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "framer-motion": "^11.5.6",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.13",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.6.0",
