--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
