--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
-    "next": "14.2.13",
-    "nookies": "^2.5.2",
+    "next": "^14.2.24",
     "react": "^18",
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.6.0",
@@ -35,7 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.1.2",
     "typescript": "^5"
   }
